@edit 配置vscode编译环境

--- a/OpenGLDemo/CMakeLists.txt
+++ b/OpenGLDemo/CMakeLists.txt
@@ -1,6 +1,11 @@
 #1.cmake verson，指定cmake版本
 cmake_minimum_required(VERSION 3.3)
 
+#设置msvc输入代码编码格式为utf-8
+if(MSVC)
+	set(CMAKE_C_FLAGS /source-charset:utf-8)
+endif()
+
 #2.project name，指定项目的名称，一般和项目的文件夹名称对应
 PROJECT(OpenGLDemo)
 
