--- a/OpenGLDemo/CMakeLists.txt
+++ b/OpenGLDemo/CMakeLists.txt
@@ -6,6 +6,11 @@ if(MSVC)
 	set(CMAKE_C_FLAGS /source-charset:utf-8)
 endif()
 
+if(MSVC)
+  target_compile_options(<target> PUBLIC "/ZI")
+  target_link_options(<target> PUBLIC "/INCREMENTAL")
+endif()
+
 #2.project name，指定项目的名称，一般和项目的文件夹名称对应
 PROJECT(OpenGLDemo)
 
